//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Store {
  id String [pk]
  name String [not null]
  userId String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Source {
  id String [pk]
  name String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  price Int [not null]
  categories Category [not null]
  options Option [not null]
  store Store [not null]
  storeId String [not null]
  source Source [not null]
  sourceId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Option {
  id String [pk]
  name String [not null]
  product Product [not null]
  productId String [not null]
  options Option_Value [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (productId, name) [unique]
  }
}

Table Option_Value {
  name String [not null]
  option Option [not null]
  optionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (optionId, name) [unique]
  }
}

Table CategoryToProduct {
  productsId String [ref: > Product.id]
  categoriesId String [ref: > Category.id]
}

Ref: Product.storeId > Store.id

Ref: Product.sourceId > Source.id

Ref: Option.productId > Product.id

Ref: Option_Value.optionId > Option.id